--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header .nav nav ul li a {
   font-size: 22px;
 }
 header .nav .show-nav {
-  height: 100dvh;
+  height: 330px !important;
   background: rgb(93, 189, 93);
   transform: translateX(0px);
 }
@@ -338,6 +338,104 @@ header .nav .hidden {
   }
   #tech .techs {
     padding: 0 !important;
+  }
+}
+
+#projects {
+  padding: 50px 0;
+  background: #fff;
+  margin-top: 30px;
+}
+#projects .project {
+  max-width: 1500px;
+  margin: auto;
+  padding: 100px 0;
+}
+#projects .project > h1 {
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 50px;
+}
+#projects .project > h1::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: rgb(93, 189, 93);
+  margin: auto;
+  animation: oat 2.5s alternate both infinite linear;
+}
+#projects .project .project-contain {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  margin-bottom: 30px;
+}
+#projects .project .project-contain img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#projects .project .project-contain a {
+  text-decoration: none;
+  color: #222;
+  border: 1px solid red;
+}
+#projects .project .project-contain a .demo {
+  margin: auto;
+  width: 100%;
+  max-width: 400px;
+  height: 300px;
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0px 0px 8px 1px grey;
+}
+#projects .project .project-contain a .demo .info {
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  background: #fff;
+  width: 100%;
+  border-radius: 10px;
+}
+#projects .project .project-contain a .demo .info h1, #projects .project .project-contain a .demo .info p {
+  margin: 10px;
+}
+#projects .project .project-contain a .demo:hover {
+  transform: scale(1.11);
+  border: 1px solid rgb(93, 189, 93);
+}
+#projects .project .project-contain a .demo:hover h1 {
+  color: rgb(93, 189, 93);
+}
+#projects .project .more {
+  text-decoration: none;
+  display: block;
+  color: rgb(93, 189, 93);
+  font-size: 25px;
+  padding: 12px;
+  border-radius: 6px;
+  border: 2px solid rgb(93, 189, 93);
+  transition: all 0.3s ease;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+#projects .project .more:hover {
+  background: rgb(93, 189, 93);
+  color: #ffffff;
+}
+@media screen and (max-width: 900px) {
+  #projects h1 {
+    font-size: 40px;
+  }
+  #projects a h1 {
+    font-size: 20px;
+  }
+  #projects a p {
+    font-size: 15px;
   }
 }
 
