--- a/style.scss
+++ b/style.scss
@@ -2,14 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    // outline: 1px solid red;
     transition: all .3s ease;
 }
 html{
     scroll-behavior: smooth;
 }
 body{
-    // overflow-x: hidden;
     background: url(./img/IMG_5903.jpeg) no-repeat;
     background-color: #747474;
     background-blend-mode: multiply;
@@ -57,8 +55,6 @@ header{
             }
         }
         nav{
-            // display: flex;
-            // justify-content: space-between;
             ul{
                 list-style: none;
                 display: flex;
@@ -74,8 +70,9 @@ header{
             }
         }
         .show-nav{
-            height: 100dvh;
+            height: 330px !important;
             background: $color;
+            // filter: blur(20px);
             transform: translateX(0px);
         }
         .hidden{
@@ -365,7 +362,111 @@ header{
 
     }
 }
+#projects{
+    padding: 50px 0;
+    background: #fff;
+    margin-top: 30px;
+    .project{
+        max-width: 1500px;
+        margin: auto;
+        padding: 100px 0;
+        &>h1{
+            text-align: center;
+            font-size: 50px;
+            margin-bottom: 50px;
+            &::after {
+                content: '';
+                display: block;
+                width: 50px;
+                height: 3px;
+                background: $color;
+                margin: auto;
+                animation: oat 2.5s alternate both infinite linear;
+            }
+        }
+        .project-contain{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
+            img{
+                width: 100%;
+                object-fit: cover;
+            }
+            a{
+                text-decoration: none;
+                color: #222;
+                border: 1px solid red;
+                .demo{
+                    margin: auto;
+                    // border: 3px solid black;
+                    width: 100%;
+                    max-width: 400px;
+                    height: 300px;
+                    border-radius: 20px;
+                    overflow: hidden;
+                    position: relative;
+                    cursor: pointer;
+                    box-shadow: 0px 0px 8px 1px grey;
+                    .info{
+                        padding: 10px;
+                        position: absolute;
+                        bottom: 0;
+                        background: #fff;
+                        width: 100%;
+                        border-radius: 10px;
+                        // font-size: 23px;
+                        h1,p{
+                            margin: 10px;
+                        }
+                        
+                    }
+                    &:hover{
+                        transform: scale(1.11);
+                        border: 1px solid $color;
+                        h1{
+                            color: $color;
+                        }
+                    }
+                    
+                }
+                        
+                
+            }
+        }
+        .more{
+            text-decoration: none;
+            display: block;
+            color: $color;
+            font-size: 25px;
+            padding: 12px;
+            border-radius: 6px;
+            border: 2px solid $color;
+            transition: all 0.3s ease;
+            width: fit-content;
+            margin: auto;
+            &:hover{
+                background: $color;
+                color: #ffffff;
+            }
+        }
+        
+    }
+    @media screen and (max-width:900px) {
+        h1{
+            font-size: 40px ;
+        }
+        a{
+            h1{
+                font-size: 20px;
+            }
+            p{
+                font-size: 15px ;
+            }
+        }
 
+    }
+}
 #contact{
     background: #fff;
     margin-top: 30px;
