--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: url(./img/IMG_5903.jpeg) no-repeat;
+    background: url(./img/IMG_5903.jpg) no-repeat;
     background-color: #747474;
     background-blend-mode: multiply;
     background-size: cover;
@@ -396,7 +396,6 @@ header{
             a{
                 text-decoration: none;
                 color: #222;
-                border: 1px solid red;
                 .demo{
                     margin: auto;
                     // border: 3px solid black;
